--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "autoload": {
         "psr-4": {
             "R\\Psr7\\": "src/"
-        }
+        },
+        "files": [
+            "function/function.php"
+        ]
     },
     "require": {
         "psr/http-message": "1.*"
@@ -15,5 +18,5 @@
     "type": "library",
     "license": "proprietary",
     "minimum-stability": "stable",
-    "version": "2.0.0"
+    "version": "2.0.1"
 }
