--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,5 @@
     },
     "type": "library",
     "license": "proprietary",
-    "minimum-stability": "stable",
-    "version": "2.1.1"
+    "minimum-stability": "stable"
 }
