--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hostlink/r-psr7",
+    "name": "mathsgod/r-psr7",
     "description": "psr7",
     "autoload": {
         "psr-4": {
