--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,16 @@
     },
     "require": {
         "php": ">=7.0",
-        "psr/http-message": "1.*"
+        "psr/http-message": "1.*",
+        "mathsgod/php-psr7": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
     },
     "type": "library",
     "license": "proprietary",
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "scripts": {
+        "test": "phpunit tests"
+    }
 }
