--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=7.0",
         "psr/http-message": "1.*",
-        "mathsgod/php-psr7": "dev-master"
+        "mathsgod/php-psr7": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
