--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,17 @@
     },
     "require": {
         "php": ">=7.0",
-        "psr/http-message": "1.*"
+        "psr/http-message": "1.*",
+        "mathsgod/php-psr7": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
+    },
+    "repositories": {
+        "php-psr7": {
+            "type": "path",
+            "url": "../php-psr7"
+        }
     },
     "type": "library",
     "license": "proprietary",
