--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,12 @@
         ]
     },
     "require": {
-        "php": ">=7.0",
+        "php": "^8.0",
         "psr/http-message": "1.*",
         "mathsgod/php-psr7": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
-    },
-    "repositories": {
-        "php-psr7": {
-            "type": "path",
-            "url": "../php-psr7"
-        }
     },
     "type": "library",
     "license": "proprietary",
